# qSnapper

./: .gitignore  CMakeLists.txt  README.md  README_JP.md
.github/workflows/: release.yml
cmake/: packaging.cmake  rpm-post-install.sh  rpm-pre-uninstall.sh
dbus/: com.presire.qsnapper.Operations.xml
include/: filechangemodel.h  snapperservice.h  snapshotgroupmodel.h  snapshotlistmodel.h  thememanager.h
polkit/: com.presire.qsnapper.policy
qml/: Main.qml
qml/components/: AboutqSnapperDialog.qml  CompareSnapshotsDialog.qml  RestorePreviewDialog.qml  SnapshotDetailDialog.qml  SnapshotEditDialog.qml  SnapshotTableHeader.qml  SnapshotTableRow.qml
qml/pages/: SnapshotListPage.qml
selinux/: Makefile  qsnapper.te
src/: filechangemodel.cpp  main.cpp  snapperservice.cpp  snapshotgroupmodel.cpp  snapshotlistmodel.cpp  thememanager.cpp
src/dbusservice/: main.cpp  snapshotoperations.cpp  snapshotoperations.h
translations/: qsnapper_de.ts  qsnapper_ja.ts
